--- a/vue/Accueil.html
+++ b/vue/Accueil.html
@@ -25,7 +25,7 @@
     </div>
     <div>
         <button class="button-default">Gérer les matchs</button>
-        <button class="button-default">Gérer les joueurs</button>
+         <a href="GestionJoueur.html"><button class="button-default">Gérer les joueurs</button></a>
         <button class="button-default">Gérer les compositions</button>
     </div>
 
