ajout fenetres, passage accueil en php

--- a/vue/GestionJoueur.html
+++ b/vue/GestionJoueur.html
@@ -13,7 +13,7 @@
                 <option value="noteAsc">Note croissante</option>
                 <option value="notDesc"> Note décroissante</option>
             </select>
-            <button class="button-default">Ajouter un joueur</button>
+            <a href="AjouterJoueur.html"><button class="button-default">Ajouter un joueur</button></a>
         </div>
         <div class="container-cartes">
             <div class="carte-joueur">
