--- a/vue/AjouterJoueur.html
+++ b/vue/AjouterJoueur.html
@@ -6,6 +6,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <nav  class="navbar">
+        <ul>
+            <li><a href="Accueil.php">Accueil</a></li>
+            <li><a href="GestionRencontre.html">Rencontre</a></li>
+            <li><a href="GestionJoueur.php">Joueurs</a></li>
+            <li><a href="GestionComposition.html">Composition</a></li>
+        </ul>
+    </nav>
     <h1>Ajouter un joueur</h1>
         <form action="ajout_joueur.php" method="post">
             <table>
