--- a/vue/GestionRencontre.html
+++ b/vue/GestionRencontre.html
@@ -4,6 +4,14 @@
         <title>Gestion des rencontres</title>
     </head>
     <body>
+        <nav  class="navbar">
+        <ul>
+            <li><a href="Accueil.php">Accueil</a></li>
+            <li><a href="GestionRencontre.html">Rencontre</a></li>
+            <li><a href="GestionJoueur.php">Joueurs</a></li>
+            <li><a href="GestionComposition.html">Composition</a></li>
+        </ul>
+    </nav>
         Gestion des rencontres
     </body>
 </html>
