--- a/vue/AjouterJoueur.html
+++ b/vue/AjouterJoueur.html
@@ -6,11 +6,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <nav  class="navbar">
+    <nav class="navbar">
         <ul>
             <li><a href="Accueil.php">Accueil</a></li>
             <li><a href="GestionRencontre.html">Rencontre</a></li>
-            <li><a href="GestionJoueur.php">Joueurs</a></li>
+            <li><a href="GestionJoueur.html">Joueurs</a></li>
             <li><a href="GestionComposition.html">Composition</a></li>
         </ul>
     </nav>
