--- a/vue/GestionComposition.html
+++ b/vue/GestionComposition.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="../vue/style.css" />
         <title>Gestion des Compositions</title>
     </head>
     <body>
         <nav  class="navbar">
-        <ul>
+            <ul>
             <li><a href="Accueil.php">Accueil</a></li>
             <li><a href="GestionRencontre.html">Rencontre</a></li>
             <li><a href="GestionJoueur.php">Joueurs</a></li>
             <li><a href="GestionComposition.html">Composition</a></li>
         </ul>
+        </nav>
     </nav>
         Gestion des composiition
     </body>
