--- a/vue/AjouterJoueur.html
+++ b/vue/AjouterJoueur.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <title>Ajouter un joueur</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Ajouter un joueur</title>
+    <link rel="stylesheet" href="../vue/style.css" />
+  </head>
+  <body>
     <nav class="navbar">
-        <ul>
-            <li><a href="Accueil.php">Accueil</a></li>
-            <li><a href="GestionRencontre.html">Rencontre</a></li>
-            <li><a href="GestionJoueur.html">Joueurs</a></li>
-            <li><a href="GestionComposition.html">Composition</a></li>
-        </ul>
+      <ul>
+        <li><a href="Accueil.php">Accueil</a></li>
+        <li><a href="GestionRencontre.html">Rencontre</a></li>
+        <li><a href="GestionJoueur.php">Joueurs</a></li>
+        <li><a href="GestionComposition.html">Composition</a></li>
+      </ul>
     </nav>
     <h1>Ajouter un joueur</h1>
-        <form action="ajout_joueur.php" method="post">
-            <table>
-                <tr> Nom : </tr><tr><input type="text" name="nom"></tr>
-                <tr>Prénom : <input type="text" name="pnom"><br/></tr>
-                Naissance : <input type="text" name="naissance">
-                Taille : <input type="int" name="taille">
-                Poids : <input type="float" name="poids"><br/>
-                Licence : <input tpe="text" name="phone"><br/>
-            </table>
+    <form action="ajout_joueur.php" method="post">
+      <table>
+        <tr>
+          Nom :
+        </tr>
+        <tr>
+          <input type="text" name="nom" />
+        </tr>
+        <tr>
+          Prénom :
+          <input type="text" name="pnom" /><br />
+        </tr>
+        Naissance :
+        <input type="text" name="naissance" />
+        Taille :
+        <input type="int" name="taille" />
+        Poids :
+        <input type="float" name="poids" /><br />
+        Licence :
+        <input tpe="text" name="phone" /><br />
+      </table>
 
-                <input type="reset" value="Réinitialiser"> <input type="submit" value="Valider"> 
-        </form>
-    </body>
+      <input type="reset" value="Réinitialiser" />
+      <input type="submit" value="Valider" />
+    </form>
+  </body>
 </html>
