--- a/vue/GestionRencontre.html
+++ b/vue/GestionRencontre.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="../vue/style.css" />
         <title>Gestion des rencontres</title>
+        
     </head>
     <body>
         <nav  class="navbar">
