--- a/vue/AjouterJoueur.html
+++ b/vue/AjouterJoueur.html
@@ -8,7 +8,7 @@
   <body>
     <nav class="navbar">
       <ul>
-        <li><a href="Accueil.php">Accueil</a></li>
+        <li><a href="../index.php">Accueil</a></li>
         <li><a href="GestionRencontre.html">Rencontre</a></li>
         <li><a href="GestionJoueur.php">Joueurs</a></li>
         <li><a href="GestionComposition.html">Composition</a></li>
