--- a/vue/GestionRencontre.html
+++ b/vue/GestionRencontre.html
@@ -2,14 +2,14 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="../vue/style.css" />
+        <link rel="stylesheet" href="style.css" />
         <title>Gestion des rencontres</title>
         
     </head>
     <body>
         <nav  class="navbar">
             <ul>
-                <li><a href="Accueil.php">Accueil</a></li>
+                <li><a href="../index.php">Accueil</a></li>
                 <li><a href="GestionRencontre.html">Rencontre</a></li>
                 <li><a href="GestionJoueur.php">Joueurs</a></li>
                 <li><a href="GestionComposition.html">Composition</a></li>
